Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-281

Sun Studio 11 reports function hides base virtual function warning

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • None
    • Layout
    • None
    • Sun Studio 11

    Description

      Compiling log4cxx 0.10.0 using Sun Studio 11 on OpenSolaris 2008.05 will generate a lot of warnings like:

      Warning log4cxx::pattern::ThrowableInformationPatternConverter::format hides the virtual function log4cxx::pattern::LoggingEventPatternConverter::format(...)

      Apparently the problem is that virtual format() methods are added in two different base classes (PatternConverter and LoggingEventPatternConverter). See http://developers.sun.com/sunstudio/products/faqs/cpp.html#q28

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            carnold@apache.org Curt Arnold
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: