LOGCXX-281: Sun Studio 11 reports function hides base virtual function warning