src/main/include/log4cxx/pattern/datepatternconverter.h
@@ -62,6 +62,12 @@ class LOG4CXX_EXPORT DatePatternConverter : public LoggingEventPatternConverter 
 
  static PatternConverterPtr newInstance(
     const std::vector<LogString>& options);
+
+
+  using PatternConverter::format;
+  using LoggingEventPatternConverter::format;
+
+
   void format(const log4cxx::spi::LoggingEventPtr& event,
      LogString& output,
      log4cxx::helpers::Pool& p) const;
